Legal informations now visible and links activated. Fixes #34170 and #34030

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -413,6 +413,7 @@ button#search
 
 #about-license {
 	font-size: 10px;
+	margin-bottom: 50px;
 }
 
 /* Web, iOS menu */
